--- a/overlay/manta/packages/apps/ROMControl/res/values/arrays.xml
+++ b/overlay/manta/packages/apps/ROMControl/res/values/arrays.xml
@@ -35,10 +35,11 @@
         <item>AIRPLANE_MODE</item>
         <item>BLUETOOTH</item>
         <item>SWAGGER</item>
+        <item>VIBRATE</item>
         <item>SILENT</item>
         <item>SYNC</item>
         <item>NFC</item>
-        <item>USBTETHER</item>
+        <item>TORCH</item>
         <item>QUICKRECORD</item>
     </string-array>
     <string-array name="available_toggles_values" translatable="false">
@@ -55,10 +56,11 @@
         <item>@string/toggle_airplane_mode</item>
         <item>@string/toggle_bluetooth</item>
         <item>@string/toggle_swagger</item>
+        <item>@string/toggle_vibrate</item>
         <item>@string/toggle_silent</item>
         <item>@string/toggle_sync</item>
         <item>@string/toggle_nfc</item>
-        <item>@string/toggle_usb_tether</item>
+        <item>@string/toggle_torch</item>
         <item>@string/toggle_quickrecord</item>
     </string-array>
 
